TAP5-2809: tapestry-core build.gradle improved